<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CNG Stations</string>
    <string name="show">Show</string>
    <string name="refresh">Refresh my location</string>
    <string name="search">Search</string>
    <string name="discard">Clear map</string>
    <string name="cheapest">Mark cheapest</string>
    <string name="closest">Mark closest</string>
    <string name="location">Go to my location</string>
    <string name="settings_title">Distance settings</string>
</resources>
