<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/refresh" android:title="@string/refresh" android:icon="@drawable/refresh" android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/search" android:title="@string/search" android:icon="@drawable/search_1" android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/cheapest" android:title="@string/cheapest" android:icon="@drawable/money" android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/closest" android:title="@string/closest" android:icon="@drawable/radar" android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/settings" android:title="@string/settings_title" android:icon="@drawable/settings" android:showAsAction="ifRoom|withText"/>

</menu>